--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Home</string>
     <string name="title_riwayat">Riwayat</string>
     <string name="title_profile">Profil</string>
+    <string name="default_web_client_id">398299366383-c119fdv69ccrpudaj2ce4aor96jdsouk.apps.googleusercontent.com</string>
 </resources>
